# ObjCompress

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  ContextManager.cpp  ContextManager.h  Main.cpp  SettingManager.cpp  SettingManager.h  Singleton.h  Util.cpp  Util.h
imagequant/: CMakeLists.txt  mediancut.c
